Expose all exports in node module
Prior to this change, if you use require('confirmed') in node you lost
the CONFIRMED, CANCELLED, REJECTED exports.

This change leans on the UMD module directly and skips the destructuring
that happened in the old index.js file.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.0",
   "description": "Framework agnostic asynchronous confirmation module",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/confirmer.js",
   "homepage": "https://github.com/sukima/confirmed",
   "repository": {
     "type": "git",
