--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "url": "https://tritarget.org/"
   },
   "scripts": {
-    "preversion": "npm run docs && git add README.md",
+    "preversion": "yarn docs && git add README.md",
     "docs": "jsdoc2md > README.md",
     "clean": "rm -r dist",
     "build": "mkdir -p dist && (node bin/header; babel src/confirmer.js) > dist/confirmer.js",
-    "test": "npm run build && mocha",
-    "prepare": "npm run build"
+    "test": "yarn build && mocha",
+    "prepare": "yarn build"
   },
   "files": [
     "dist",
     "yarn.lock"
   ],
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "jsdoc-to-markdown": "^4.0.1",
     "mocha": "^3.4.2",
     "sinon": "^2.4.1"
@@ -50,5 +50,9 @@
     "heading-depth": 3,
     "example-lang": "js"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "volta": {
+    "node": "10.16.3",
+    "yarn": "1.17.3"
+  }
 }
